<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    tools:context=".activities.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPannel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_ship_address"
            android:textSize="17sp"
            android:textColor="@color/textGray"
            app:layout_constraintBottom_toBottomOf="@id/buttonSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonSearch"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/buttonAddress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/arrow"
            app:layout_constraintBottom_toBottomOf="@id/buttonSearch"
            app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
            app:layout_constraintTop_toTopOf="@+id/buttonSearch"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:hint="@string/search"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/buttonCloseSearch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/cross"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
            app:layout_constraintTop_toTopOf="@+id/buttonSearch" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/find"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayoutAdds"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        ads:adSize="BANNER"
        android:visibility="visible"
        ads:adUnitId="ca-app-pub-5061314870600158/7189348397"
        app:layout_constraintTop_toBottomOf="@id/topPannel" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categoriesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAdds">

        <TextView
            android:id="@+id/textViewResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/italianno"
            android:text="@string/results"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewFoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foods"
            android:textColor="@color/orange"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewDrinks"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDrinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinks"
            android:textColor="@color/textGray"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewSnacks"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewFoods"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSnacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snacks"
            android:textColor="@color/textGray"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewSauce"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewDrinks"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sauce"
            android:textColor="@color/textGray"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewSnacks"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDishes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriesList"
        app:layout_constraintBottom_toTopOf="@id/menu"
        app:spanCount="2"
        tools:listitem="@layout/dish_item" />

    <LinearLayout
        android:id="@+id/linearLayoutItem"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="15dp"
        android:padding="20dp"
        android:background="@drawable/button_bg"
        android:elevation="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesList">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="0"
                android:src="@drawable/ic_item_back" />

            <TextView
                android:id="@+id/textViewMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="220dp"
                android:layout_weight="1"
                android:text="More"
                android:textAlignment="viewEnd"
                android:textColor="#000"
                android:textFontWeight="1000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="129dp"
                android:layout_height="129dp"
                android:layout_weight="0"
                app:cardCornerRadius="65dp">

                <ImageView
                    android:id="@+id/imageViewItemIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/launch_screen_background" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewItemName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:autoSizeMaxTextSize="22sp"
                    android:autoSizeTextType="uniform"
                    android:text="Veggie tomato mix"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textFontWeight="1000" />

                <TextView
                    android:id="@+id/textViewItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="N1,900"
                    android:textAlignment="center"
                    android:textColor="#FA4A0C"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal"
            android:paddingLeft="18dp">

            <LinearLayout
                android:id="@+id/linearLayoutMinus"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/main_navigation_button_radius"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/ic_minus" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewItemCount"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="1"
                android:textColor="#9A9A9D"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayoutPlus"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/main_navigation_button_radius"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutAddToCart"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="13dp"
                android:background="@drawable/button_bg"
                android:backgroundTint="#FA4A0C"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Add to cart"
                    android:textColor="#F6F6F9"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cart" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="42dp"
            android:layout_marginRight="19dp"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_bg"
                android:backgroundTint="#FA4A0C"
                android:text="@string/continue_shop"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="1000"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGoToCart"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_bg"
                android:backgroundTint="#FA4A0C"
                android:text="@string/go_to_cart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="1000"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F7F7F7"
        android:orientation="horizontal"
        android:padding="20dp"
        android:elevation="5dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:background="@drawable/home"
            android:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonCart"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonCart"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:background="@drawable/cart"
            app:layout_constraintBottom_toBottomOf="@id/buttonHome"
            app:layout_constraintEnd_toStartOf="@+id/buttonProfile"
            app:layout_constraintStart_toEndOf="@+id/buttonHome"
            app:layout_constraintTop_toTopOf="@id/buttonHome" />

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:backgroundTint="#b3b3c3"
            android:background="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="@id/buttonHome"
            app:layout_constraintEnd_toStartOf="@+id/buttonTime"
            app:layout_constraintStart_toEndOf="@+id/buttonCart"
            app:layout_constraintTop_toTopOf="@id/buttonHome" />

        <Button
            android:id="@+id/buttonTime"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:background="@drawable/time"
            app:layout_constraintBottom_toBottomOf="@id/buttonHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonProfile"
            app:layout_constraintTop_toTopOf="@id/buttonHome" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>